<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:padding="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical" >
	
	<ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/slogan"
        android:src="@drawable/t2t_back" 
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>
	
    <LinearLayout
        android:clickable="true" 
    	android:focusableInTouchMode="true"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
        android:layout_below="@id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:orientation="vertical" >
	<EditText
        android:inputType="number"
        android:id="@+id/tripID"
        android:hint="@string/tripID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    	android:textSize="30sp"
    	android:imeOptions="actionDone" />    
	<Button
        android:id="@+id/load"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    	android:textSize="25sp"
        android:text="@string/load" />
	</LinearLayout>
    
</RelativeLayout>